tests/misc_tests/type_fn_ui_tests/inj_type_fn_from_too_generic-err.stderr
error[E0207]: the const parameter `N` is not constrained by the impl trait, self type, or predicates
 --> tests/misc_tests/type_fn_ui_tests/inj_type_fn_from_too_generic-err.rs:1:1
  |
1 | / typewit::inj_type_fn!{
2 | |     struct FromTooGenericA;
3 | |
4 | |     impl<T, const N: usize> [T; N] => T;
5 | | }
  | |_^ unconstrained const parameter
  |
  = note: expressions using a const parameter must map each value to a distinct output value
  = note: proving the result of expressions other than the parameter are unique is not supported
  = note: this error originates in the macro `$crate::__::__parse_in_generics` which comes from the expansion of the macro `typewit::inj_type_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> tests/misc_tests/type_fn_ui_tests/inj_type_fn_from_too_generic-err.rs:10:13
   |
10 |     impl<T, U> (T, U) => T;
   |             ^ unconstrained type parameter

error[E0207]: the type parameter `I` is not constrained by the impl trait, self type, or predicates
  --> tests/misc_tests/type_fn_ui_tests/inj_type_fn_from_too_generic-err.rs:16:10
   |
16 |     impl<I: IntoIterator> I => <I as IntoIterator>::Item;
   |          ^ unconstrained type parameter

error[E0284]: type annotations needed
 --> tests/misc_tests/type_fn_ui_tests/inj_type_fn_from_too_generic-err.rs:1:1
  |
1 | / typewit::inj_type_fn!{
2 | |     struct FromTooGenericA;
3 | |
4 | |     impl<T, const N: usize> [T; N] => T;
5 | | }
  | |_^ cannot infer the value of const parameter `N`
  |
note: required for `FromTooGenericA` to implement `RevTypeFn<T>`
 --> tests/misc_tests/type_fn_ui_tests/inj_type_fn_from_too_generic-err.rs:1:1
  |
1 | / typewit::inj_type_fn!{
2 | |     struct FromTooGenericA;
3 | |
4 | |     impl<T, const N: usize> [T; N] => T;
5 | | }
  | |_^ unsatisfied trait bound introduced here
  = note: required for `FromTooGenericA` to implement `InjTypeFn<[T; N]>`
  = note: this error originates in the macro `$crate::__tyfn_injtypefn_impl` which comes from the expansion of the macro `typewit::inj_type_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0282]: type annotations needed
  --> tests/misc_tests/type_fn_ui_tests/inj_type_fn_from_too_generic-err.rs:7:1
   |
7  | / typewit::inj_type_fn!{
8  | |     struct FromTooGenericB;
9  | |
10 | |     impl<T, U> (T, U) => T;
11 | | }
   | |_^ cannot infer type
   |
   = note: this error originates in the macro `$crate::__tyfn_injtypefn_impl` which comes from the expansion of the macro `typewit::inj_type_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
  --> tests/misc_tests/type_fn_ui_tests/inj_type_fn_from_too_generic-err.rs:13:1
   |
13 | / typewit::inj_type_fn!{
14 | |     struct IntoIteratorFn;
15 | |
16 | |     impl<I: IntoIterator> I => <I as IntoIterator>::Item;
17 | | }
   | |_^ cannot infer type
   |
   = note: cannot satisfy `_: IntoIterator`
note: required for `IntoIteratorFn` to implement `RevTypeFn<<I as IntoIterator>::Item>`
  --> tests/misc_tests/type_fn_ui_tests/inj_type_fn_from_too_generic-err.rs:13:1
   |
13 | / typewit::inj_type_fn!{
14 | |     struct IntoIteratorFn;
15 | |
16 | |     impl<I: IntoIterator> I => <I as IntoIterator>::Item;
   | |             ------------ unsatisfied trait bound introduced here
17 | | }
   | |_^
   = note: required for `IntoIteratorFn` to implement `InjTypeFn<I>`
   = note: this error originates in the macro `$crate::__tyfn_injtypefn_impl` which comes from the expansion of the macro `typewit::inj_type_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
