tests/misc_tests/type_fn_ui_tests/inj_type_fn_from_too_generic-err.rs
typewit::inj_type_fn!{
    struct FromTooGenericA;

    impl<T, const N: usize> [T; N] => T;
}

typewit::inj_type_fn!{
    struct FromTooGenericB;

    impl<T, U> (T, U) => T;
}

typewit::inj_type_fn!{
    struct IntoIteratorFn;

    impl<I: IntoIterator> I => <I as IntoIterator>::Item;
}

fn main(){}